src/test/ui/parser/better-expected.stderr
error: expected one of `!`, `(`, `+`, `::`, `;`, `<`, or `]`, found `3`
  --> $DIR/better-expected.rs:2:19
   |
LL |     let x: [isize 3];
   |         -         ^ expected one of 7 possible tokens here
   |         |
   |         while parsing the type for `x`

error: aborting due to previous error

